# scene-format

./: .gitignore  README.md  feed.xml  generate_docs.sh  index.html  scene-format.json  scene-format.proto
.github/workflows/: pages.yml  protoc.yml
cpp/builder/: Dockerfile  build.sh  main.go
cpp/example/Example/: Example.cpp  Example.vcxproj  Example.vcxproj.filters  packages.config
cpp/sceneformat/: .gitignore  CMakeLists.txt  build_from_protoc.sh  sceneio.cpp  sceneio.h
cpp/sceneformat/example/Example/: .gitignore  Example.cpp  Example.sln
csharp/SceneFormat/: README.md  SceneFormat.sln
csharp/SceneFormat/Example/: Example.csproj  Program.cs
csharp/SceneFormat/SceneFormat/: .gitignore  ISceneIO.cs  SceneFormat.csproj  SceneIO.cs  SceneIOException.cs  ScenePostProcessing.cs
csharp/SceneFormat/SceneFormatTests/: JsonErrorTests.cs  SceneFormatTests.csproj
docs/: _config.yml  html.tmpl  index.html  styles.css
docs/_layouts/: default.html
docs/languages/: cpp.html  csharp.html  java.html  rust.html  ts.html
file_samples/: simple_json.cowscene
java/example/: build.gradle
java/sceneformat/: .gitignore  build.gradle  settings.gradle
languages/: cpp.html  csharp.html  java.html  rust.html  ts.html
proto/: scene-format.proto  scene.proto
rust/: .gitignore  Cargo.toml  build.rs
rust/examples/: 1.cowscene  10.cowscene  5.cowscene  7.cowscene  8.cowscene  9.cowscene
rust/src/: errors.rs  lib.rs  obj.rs
ts/: .gitignore  index.ts  package-lock.json  package.json  scene_io.ts  tsconfig.json
ts/example/: main.ts  package-lock.json  package.json
(+4 files in other folders)
