[package]
name = "sceneformat"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
prost-types = "0.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
custom_error = "1.9.2"
log = "0.4.14"
env_logger = "0.8.3"
ctor = "0.1.20"

[build-dependencies]
prost-build = "0.7"